fix panel content spill clipping

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,5 +1,4 @@
 .modal {
-	background-color: var(--palette-black);
 	max-height: 80vh;
 	max-width: 50vw;
 	min-width: 50rem;
